syntax = "proto3";

option csharp_namespace = "GrpcServicePatterns.Protos";

package product;

service ProductProtoService {

	rpc GetProduct(GetProductRequest) returns (ProductModel);
	rpc CreateProduct(CreateProductRequest) returns (ProductModel);
	rpc UpdateProduct(UpdateProductRequest) returns (ProductModel);
	rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message ProductModel {
	
	int32 id = 1;
	string name = 2;
	string price = 3;
	string productType = 4;
}

message GetProductRequest {
	ProductModel productModel = 1;
}

message CreateProductRequest {
	ProductModel productModel = 1;
}

message UpdateProductRequest {
	ProductModel productModel = 1;
}

message DeleteProductRequest {
	string productName = 1;
}

message DeleteProductResponse {
	bool success = 1;
}